@@ -1,117 +1,179 @@
 package com.service;
-
+ 
 import com.dao.CustomersDAO;
 import com.model.Customers;
+import com.model.TransactionStatus;
+import com.model.Transactions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-
-import java.util.List;
+import org.mockito.junit.jupiter.MockitoExtension;
+ 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Optional;
-
+import java.util.List;
+ 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
-
+ 
+@ExtendWith(MockitoExtension.class)
 public class CustomersServiceTest {
-
+ 
     @Mock
     private CustomersDAO customersDAO;
-
+ 
     @InjectMocks
     private CustomersService customersService;
-
+ 
+    private Customers customer;
+    private Transactions transaction;
+ 
     @BeforeEach
     public void setUp() {
-        MockitoAnnotations.openMocks(this);
+        customer = new Customers();
+        customer.setCustomerId(1L);
+        customer.setFirstName("John");
+        customer.setLastName("Doe");
+        customer.setEmail("john.doe@example.com");
+        customer.setPhoneNumber("1234567890");
+ 
+        transaction = new Transactions();
+        transaction.setTransactionId(1L);
+        transaction.setCustomer(customer);
+        transaction.setTransactionDate(new java.util.Date());
+        transaction.setAmount(100.0);
+        transaction.setTransactionStatus(TransactionStatus.Success);
     }
-
+ 
     @Test
     public void testGetAllCustomers() {
-        List<Customers> customers = List.of(new Customers());
-        when(customersDAO.findAll()).thenReturn(customers);
-
-        List<Customers> result = customersService.getAllCustomers();
-        assertNotNull(result);
-        assertFalse(result.isEmpty());
+        when(customersDAO.findAll()).thenReturn(Arrays.asList(customer));
+        List<Customers> customers = customersService.getAllCustomers();
+        assertNotNull(customers);
+        assertEquals(1, customers.size());
     }
-
+ 
     @Test
     public void testGetCustomerById() {
-        Customers customer = new Customers();
         when(customersDAO.findById(1L)).thenReturn(Optional.of(customer));
-
-        Optional<Customers> result = customersService.getCustomerById(1L);
-        assertTrue(result.isPresent());
+        Optional<Customers> foundCustomer = customersService.getCustomerById(1L);
+        assertTrue(foundCustomer.isPresent());
+        assertEquals("John", foundCustomer.get().getFirstName());
     }
-
+ 
+    @Test
+    public void testGetCustomerById_NotFound() {
+        when(customersDAO.findById(1L)).thenReturn(Optional.empty());
+        Optional<Customers> foundCustomer = customersService.getCustomerById(1L);
+        assertFalse(foundCustomer.isPresent());
+    }
+ 
     @Test
     public void testGetCustomerByName() {
-        Customers customer = new Customers();
         when(customersDAO.findByFirstNameAndLastName("John", "Doe")).thenReturn(customer);
-
-        Customers result = customersService.getCustomerByName("John", "Doe");
-        assertNotNull(result);
+        Customers foundCustomer = customersService.getCustomerByName("John", "Doe");
+        assertNotNull(foundCustomer);
+        assertEquals("John", foundCustomer.getFirstName());
     }
-
+ 
+    @Test
+    public void testGetCustomerByName_NotFound() {
+        when(customersDAO.findByFirstNameAndLastName("John", "Doe")).thenReturn(null);
+        Customers foundCustomer = customersService.getCustomerByName("John", "Doe");
+        assertNull(foundCustomer);
+    }
+ 
     @Test
     public void testGetCustomersByCity() {
-        List<Customers> customers = List.of(new Customers());
-        when(customersDAO.findByCity("New York")).thenReturn(customers);
-
-        List<Customers> result = customersService.getCustomersByCity("New York");
-        assertNotNull(result);
-        assertFalse(result.isEmpty());
+        when(customersDAO.findByCity("New York")).thenReturn(Arrays.asList(customer));
+        List<Customers> customers = customersService.getCustomersByCity("New York");
+        assertNotNull(customers);
+        assertEquals(1, customers.size());
     }
-
+ 
+    @Test
+    public void testGetCustomersByCity_NotFound() {
+        when(customersDAO.findByCity("New York")).thenReturn(Collections.emptyList());
+        List<Customers> customers = customersService.getCustomersByCity("New York");
+        assertTrue(customers.isEmpty());
+    }
+ 
     @Test
     public void testGetCustomersByState() {
-        List<Customers> customers = List.of(new Customers());
-        when(customersDAO.findByState("California")).thenReturn(customers);
-
-        List<Customers> result = customersService.getCustomersByState("California");
-        assertNotNull(result);
-        assertFalse(result.isEmpty());
+        when(customersDAO.findByState("NY")).thenReturn(Arrays.asList(customer));
+        List<Customers> customers = customersService.getCustomersByState("NY");
+        assertNotNull(customers);
+        assertEquals(1, customers.size());
     }
-
+ 
     @Test
-    public void testGetCustomersByTransactionStatus() {
-        List<Customers> customers = List.of(new Customers());
-        when(customersDAO.findCustomersByTransactionStatus("Completed")).thenReturn(customers);
-
-        List<Customers> result = customersService.getCustomersByTransactionStatus("Completed");
-        assertNotNull(result);
-        assertFalse(result.isEmpty());
+    public void testGetCustomersByState_NotFound() {
+        when(customersDAO.findByState("NY")).thenReturn(Collections.emptyList());
+        List<Customers> customers = customersService.getCustomersByState("NY");
+        assertTrue(customers.isEmpty());
     }
-
+ 
+    @Test
+    public void testGetCustomersByTransactionStatus_Success() {
+        when(customersDAO.findCustomersByTransactionStatus(TransactionStatus.Success)).thenReturn(Arrays.asList(customer));
+        List<Customers> customers = customersService.getCustomersByTransactionStatus(TransactionStatus.Success);
+        assertNotNull(customers);
+        assertEquals(1, customers.size());
+    }
+ 
+    @Test
+    public void testGetCustomersByTransactionStatus_Failed() {
+        when(customersDAO.findCustomersByTransactionStatus(TransactionStatus.Failed)).thenReturn(Collections.emptyList());
+        List<Customers> customers = customersService.getCustomersByTransactionStatus(TransactionStatus.Failed);
+        assertTrue(customers.isEmpty());
+    }
+ 
     @Test
     public void testGetCustomersWithoutTransactions() {
-        List<Customers> customers = List.of(new Customers());
-        when(customersDAO.findCustomersWithoutTransactions()).thenReturn(customers);
-
-        List<Customers> result = customersService.getCustomersWithoutTransactions();
-        assertNotNull(result);
-        assertFalse(result.isEmpty());
+        when(customersDAO.findCustomersWithoutTransactions()).thenReturn(Arrays.asList(customer));
+        List<Customers> customers = customersService.getCustomersWithoutTransactions();
+        assertNotNull(customers);
+        assertEquals(1, customers.size());
     }
-
+ 
+    @Test
+    public void testGetCustomersWithoutTransactions_NotFound() {
+        when(customersDAO.findCustomersWithoutTransactions()).thenReturn(Collections.emptyList());
+        List<Customers> customers = customersService.getCustomersWithoutTransactions();
+        assertTrue(customers.isEmpty());
+    }
+ 
     @Test
     public void testAddCustomer() {
-        Customers customer = new Customers();
         when(customersDAO.save(customer)).thenReturn(customer);
-
-        Customers result = customersService.addCustomer(customer);
-        assertNotNull(result);
+        Customers addedCustomer = customersService.addCustomer(customer);
+        assertNotNull(addedCustomer);
+        assertEquals("John", addedCustomer.getFirstName());
     }
-
+ 
     @Test
     public void testUpdateCustomer() {
-        Customers customer = new Customers();
         when(customersDAO.findById(1L)).thenReturn(Optional.of(customer));
-        when(customersDAO.save(customer)).thenReturn(customer);
-
-        Customers customerDetails = new Customers();
-        Customers result = customersService.updateCustomer(1L, customerDetails);
+        when(customersDAO.save(any(Customers.class))).thenReturn(customer);
+        Customers updatedCustomer = new Customers();
+        updatedCustomer.setFirstName("Jane");
+        updatedCustomer.setLastName("Doe");
+        updatedCustomer.setEmail("jane.doe@example.com");
+        updatedCustomer.setPhoneNumber("0987654321");
+ 
+        Customers result = customersService.updateCustomer(1L, updatedCustomer);
         assertNotNull(result);
+        assertEquals("Jane", result.getFirstName());
+    }
+ 
+    @Test
+    public void testUpdateCustomer_NotFound() {
+        when(customersDAO.findById(1L)).thenReturn(Optional.empty());
+        Customers updatedCustomer = new Customers();
+        Customers result = customersService.updateCustomer(1L, updatedCustomer);
+        assertNull(result);
     }
 }
